scss/partials/_board_edit.scss
div.board-edit-container {
  width: 100%;
  height: 100vh;
  position: fixed;
  top: 0px;
  left: 0px;
  background-color: $carrot_modal_bg;
  z-index: #{$navbar_zindex + 105};
  transition: opacity 180ms ease-in;
  overflow-y: auto;

  &.will-appear {
    opacity: 0;
  }

  &.appear {
    opacity: 1;
  }

  div.modal-wrapper {
    width: #{552 + 20 + 8}px;
    margin: 40px auto;
    position: relative;

    div.board-edit {
      margin: 0px 0px 32px 28px;
      position: relative;
      width: 552px;
      background-color: white;
      border-radius: 8px;
      box-shadow: 0 4px 10px 0 rgba(0,0,0,0.05);
      padding: 24px 16px;

      span.more-info {
        width: 16px;
        height: 16px;
        background-image: cdnUrl("/img/ML/board_edit_more_info.svg");
        background-size: 16px 16px;
        background-position: 50%;
        display: inline-block;
        margin-left: 10px;
        margin-bottom: -1px;
        opacity: 0.5;
      }

      div.board-edit-header {
        height: 44px;

        div.user-avatar-img-container{
          margin-right: 16px;
          float: left;
        }

        @include user-profile(32);

        div.title {
          @include avenir_H();
          font-size: 12px;
          color: $oc_gray_7;
          float: left;
          margin-top: 5px;

          span.board-name {
            color: $oc_gray_7;
            @include avenir_H();

            .emojione {
              @include emoji-size(14);
            }
          }
        }
      }

      div.board-edit-divider {
        width: calc(100% + 48px);
        margin-left: -24px;
        height: 1px;
        background-color: $carrot_light_gray_1;
        opacity: 0.3;
      }

      div.board-edit-body {
        margin-bottom: 16px;

        div.board-edit-label {
          @include avenir_H();
          font-size: 12px;
          color: $oc_gray_7;
        }

        div.board-edit-name-label-container {
          margin-top: 16px;
          height: 22px;

          div.board-edit-name-label {
            width: 135px;
            float: left;
            margin-top: 4px;
          }

          div.board-name-error {
            color: $carrot_orange;
            font-size: 16px;
            @include avenir_R();
            margin-left: 10px;
            float: left;
          }
        }

        div.board-edit-name-field {
          border-radius: 2px;
          background-color: white;
          border: 1px solid rgba($carrot_light_gray_1, 0.5);
          width: 100%;
          margin-top: 6px;
          height: 40px;
          @include avenir_M();
          font-size: 14px;
          color: $oc_gray_7;
          padding: 10px 16px;
          outline: none;

          .emojione {
            @include emoji-size(13);
          }

          &:empty:before {
            @include avenir_M();
            font-size: 14px;
            color: $carrot_light_gray_1;
            content: attr(placeholder);
          }

          &.board-name-error {
            border: 1px solid $carrot_orange;
          }
        }

        div.board-edit-access-label {
          margin-top: 26px;
        }

        div.board-edit-access-field {
          width: 100%;
          height: 96px;
          margin-top: 6px;

          div.tooltip {
            .tooltip-inner {
              white-space: normal;
              max-width: 150px;
              text-align: center;
            }
          }

          div.board-edit-access-bt {
            width: 33%;
            border: 1px solid rgba($carrot_light_gray_1, 0.5);
            padding: 1px;
            height: 96px;
            float: left;
            cursor: pointer;
            background-position: 50% 15px;
            background-size: 38px 38px;
            background-repeat: no-repeat;
            text-align: center;

            &:first-child {
              border-top-left-radius: 8px;
              border-bottom-left-radius: 8px;
            }

            &:last-child {
              border-top-right-radius: 8px;
              border-bottom-bottom-radius: 8px;
            }

            &.selected {
              border: 2px solid $carrot_text_blue;
              background-position: 50% 14px;
              padding: 0px;
            }

            &.board-edit-access-team-bt {
              background-image: cdnUrl("/img/ML/board_edit_access_team.svg");
            }

            &.board-edit-access-private-bt {
              background-image: cdnUrl("/img/ML/board_edit_access_private.svg");
            }

            &.board-edit-access-public-bt {
              background-image: cdnUrl("/img/ML/board_edit_access_public.svg");
            }

            span.board-edit-access-title {
              position: relative;
              top: 60px;
              color: $carrot_dark_gray;
              font-size: 16px;
              @include avenir_H();
              @include no-user-select();
            }
          }
        }
      }

      div.board-edit-slack-channels-container {
        background-color: rgba($carrot_light_gray_2, 0.3);
        height: 114px;
        border-bottom: 1px solid rgba($carrot_light_gray_1, 0.3);
        width: calc(100% + 32px);
        margin-left: -16px;
        padding: 16px;

        div.board-edit-slack-channels-label {
          div.title {
            font-size: 16px;
            color: $carrot_dark_gray;
            @include avenir_M();
            float: left;
            width: 70%;
          }

          div.carrot-checkbox {
            float: right;
          }
        }

        div.slack-channels-dropdown {
          margin: 16px 0px;
        }
      }

      div.board-edit-private-users-container {
        div.board-edit-private-users-search {
          width: 100%;
          height: 40px;
          border: 1px solid rgba($carrot_light_gray_1, 0.5);
          border-radius: 4px;
          position: relative;
          padding: 10px 43px;

          &:before {
            position: absolute;
            content: "";
            top: 10px;
            left: 6px;
            width: 21px;
            height: 20px;
            @include image-2x("/img/ML/search_lens");
            background-size: 21px 20px;
          }

          input {
            width: 100%;
            border: none;
            outline: none;
            @include avenir_R();
            font-size: 16px;
            color: $carrot_dark_gray;

            @include placeholder(){
              color: rgba($carrot_light_gray, 0.9);
            }
          }

          div.board-edit-add-user-dropdown-container{
            position: absolute;
            right: 100px;
            z-index: 3;

            div.dropdown-list-container {
              top: 0px;
              left: 0px;
              width: 100px;

              div.triangle {
                top: unset;
                bottom: -1px;
                border-top: 0px solid rgba(177,184,192,0.50);
                border-left: 0px solid rgba(177,184,192,0.50);
                border-bottom: 1px solid rgba(177,184,192,0.50);
                border-right: 1px solid rgba(177,184,192,0.50);
              }
            }
          }

          div.board-edit-private-users-results {
            position: absolute;
            top: 38px;
            left: 0px;
            width: 100%;
            max-height: 130px;
            background-color: white;
            border-radius: 6px;
            border: 1px solid rgba($carrot_light_gray_1, 0.5);
            z-index: 2;
            overflow-y: auto;

            div.board-edit-private-users-result {
              height: 40px;
              @include avenir_R();
              font-size: 16px;
              color: $carrot_dark_gray;
              padding: 4px 16px;
              width: 100%;
              cursor: pointer;

              &:hover {
                background-color: rgba($carrot_light_gray, 0.3);
              }

              @include user-profile(32);

              div.user-avatar-img-container {
                float: left;
              }

              div.name {
                float: left;
                max-width: 50%;
                margin-left: 16px;
                overflow: hidden;
                text-overflow: ellipsis;
                margin-top: 6px;
              }

              div.user-type {
                float: right;
                max-width: calc(50% - 32px - 6px);
                margin-top: 6px;
                position: relative;
                padding-right: 12px;
                cursor: pointer;

                &:after {
                  content: "";
                  position: absolute;
                  top: 6px;
                  right: 0px;
                  background-image: cdnUrl("/img/ML/board_settings.svg");
                  background-size: 8px 8px;
                  background-repeat: no-repeat;
                  width: 8px;
                  height: 8px;
                }

                &.no-dropdown {
                  cursor: default;

                  &:after {
                    display: none;
                  }
                }
              }
            }
          }
        }

        div.board-edit-private-users {
          margin: 16px 0px;

          div.board-edit-private-users-list {
            width: 100%;
            padding: 0px 16px 0px 0px;
            @include avenir_R();
            font-size: 16px;
            color: $carrot_dark_gray;

            div.board-edit-private-user {
              height: 64px;
              width: 100%;
              padding: 16px 0px;
              box-shadow: inset 0px -1px 0px $carrot_light_gray_2;

              @include user-profile(32);

              div.user-avatar-img-container {
                float: left;
              }

              div.name {
                float: left;
                max-width: 50%;
                margin-left: 16px;
                overflow: hidden;
                text-overflow: ellipsis;
                margin-top: 6px;
              }

              div.user-type {
                float: right;
                max-width: calc(50% - 32px - 6px);
                margin-top: 6px;
                position: relative;
                padding-right: 12px;
                cursor: pointer;

                &:after {
                  content: "";
                  position: absolute;
                  top: 6px;
                  right: 0px;
                  background-image: cdnUrl("/img/ML/board_settings.svg");
                  background-size: 8px 8px;
                  background-repeat: no-repeat;
                  width: 8px;
                  height: 8px;
                }

                &.no-dropdown {
                  cursor: default;

                  &:after {
                    display: none;
                  }
                }

                div.dropdown-list-container {
                  top: 24px;
                  left: -11px;
                }
              }
            }
          }
        }
      }

      div.board-edit-footer {
        height: 40px;
        margin-top: 15px;
        position: relative;
        z-index: 1;

        div.board-edit-footer-left {
          float: left;
          button {
            float: left;
            margin-right: 16px;
            padding-left: 0px;
            text-align: left;
          }

          button.cancel-btn {
            color: $oc_gray_7;
          }

          button.delete-board {
            color: $oc_gray_7;
            @include avenir_M();
            font-size: 16px;
          }
        }

        div.board-edit-footer-right {
          float: right;
          button {
            float: right;
            margin-left: 16px;
            width: 115px;
          }
        }

        button {
          height: 40px;
        }
      }
    }
  }
}

